# smartzhomez

IOBrokerAPI/: Cargo.toml
IOBrokerAPI/src/: e3dc.rs  main.rs
backend/services/fetcher/: dockerfile
backend/services/fetcher/src/: Untitled-1.json  deno.json  influx.ts  lambdaProcessing.ts  main.ts  models.ts  package-lock.json  package.json
webapp/: package-lock.json  package.json
webapp/src/: iobrokerApi.ts
webapp/src/app/: page.tsx
