[package]
name = "IOBrokerAPI"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.1"
actix-web = "4.4.0"
chrono = "0.4.31"
clap = { version = "4.4.6", features = ["derive"]}
env_logger = "0.10.0"
serde = { version = "1.0.188" , features = ["derive"] }
serde_json = "1.0.107"
uuid = "1.4.1"
